@startuml
skinparam backgroundColor white
skinparam shadowing false
skinparam defaultFontName "Microsoft YaHei"
skinparam defaultFontSize 15
skinparam classAttributeIconSize 0
skinparam ArrowColor #333333
skinparam ArrowThickness 1.2
skinparam nodesep 34
skinparam ranksep 38

skinparam class {
  BackgroundColor white
  BorderColor #111111
  FontColor #111111
}

title 图4 控制层详细类图（Controller）
top to bottom direction

class "UserController\n用户管理控制器" as UserController {
  +BaseResult<UserInfoVO> getUserByUserId(String userId)
}

class "UserResumeTemplateController\n简历模板控制器" as UserResumeTemplateController {
  +BaseResult<ResumeTemplateInfoVO> findResumeTemplateById(Integer resumeTemplateId)
}

class "UserRecruitPositionController\n招聘岗位控制器" as UserRecruitPositionController {
  +BaseResult<RecruitPositionInfoVO> queryRecruitPosition(Integer recruitPositionId)
}

class "AdminController\n管理员控制器" as AdminController {
  +BaseResult<AdminInfoVO> findAdminById(Integer adminId)
}

class "AdminEmploymentInformationController\n招聘信息控制器" as AdminEmploymentInformationController {
  +BaseResult<EmploymentInformationInfoVO> getEmploymentInformationInfo(Integer employmentInformationId)
}

class "AdmonitorServiceMachineManageController\n服务器管理控制器" as AdmonitorServiceMachineManageController {
  +BaseResult<AdmonitorServiceMachineInfoVO> getAdmonitorServiceMachineInfo(Integer id)
}

class "AdmonitorServiceMachineJianKongController\n服务器监控控制器" as AdmonitorServiceMachineJianKongController {
  +BaseResult<AdmonitorServiceMachineJianKongVO> getAdmonitorServiceMachineJianKongInfo(AdmonitorServiceMachineJianKongForm form)
}

class "BaseResult<T>\n通用返回包装类" as BaseResult {
  -code: Integer
  -message: String
  -data: T
  +ok(T data): BaseResult<T>
}

class "UserInfoVO\n用户信息返回对象" as UserInfoVO {
  -userId: Integer
  -userAccount: String
  -userEmail: String
  -userDreamPosition: int
}

class "ResumeTemplateInfoVO\n简历模板返回对象" as ResumeTemplateInfoVO {
  -resumeTemplateId: Integer
  -resumeTemplateName: String
  -isEnable: Integer
  -createTime: Date
}

class "RecruitPositionInfoVO\n招聘岗位返回对象" as RecruitPositionInfoVO {
  -recruitPositionId: Integer
  -recruitPositionName: String
  -recruitPositionIndustryCode: Integer
  -minMonthSalary: BigDecimal
}

class "AdminInfoVO\n管理员信息返回对象" as AdminInfoVO {
  -adminId: Integer
  -adminAccount: String
  -adminUsername: String
  -adminState: Integer
}

class "EmploymentInformationInfoVO\n招聘信息返回对象" as EmploymentInformationInfoVO {
  -employmentInformationId: Integer
  -employmentInformationCode: Integer
  -employmentInformationBatch: Integer
  -employmentInformationCompanyType: Integer
}

class "AdmonitorServiceMachineInfoVO\n服务器信息返回对象" as AdmonitorServiceMachineInfoVO {
  -serviceMachineId: Integer
  -serviceMachineName: String
  -serviceMachineHost: String
  -serviceMachinePort: Integer
}

class "AdmonitorServiceMachineJianKongVO\n服务器监控返回对象" as AdmonitorServiceMachineJianKongVO {
  -serviceMachineId: Integer
  -serviceMachineName: String
  -cpuUsage: Double
  -online: Boolean
}

interface "Serializable\n<<interface>>" as Serializable

UserController ..> BaseResult
UserResumeTemplateController ..> BaseResult
UserRecruitPositionController ..> BaseResult
AdminController ..> BaseResult
AdminEmploymentInformationController ..> BaseResult
AdmonitorServiceMachineManageController ..> BaseResult
AdmonitorServiceMachineJianKongController ..> BaseResult

BaseResult ..> UserInfoVO
BaseResult ..> ResumeTemplateInfoVO
BaseResult ..> RecruitPositionInfoVO
BaseResult ..> AdminInfoVO
BaseResult ..> EmploymentInformationInfoVO
BaseResult ..> AdmonitorServiceMachineInfoVO
BaseResult ..> AdmonitorServiceMachineJianKongVO

UserInfoVO ..|> Serializable
ResumeTemplateInfoVO ..|> Serializable
RecruitPositionInfoVO ..|> Serializable
AdminInfoVO ..|> Serializable
EmploymentInformationInfoVO ..|> Serializable
AdmonitorServiceMachineInfoVO ..|> Serializable
AdmonitorServiceMachineJianKongVO ..|> Serializable

UserController -[hidden]right-> UserResumeTemplateController
UserResumeTemplateController -[hidden]right-> UserRecruitPositionController
UserRecruitPositionController -[hidden]right-> AdminController
AdminController -[hidden]right-> AdminEmploymentInformationController
AdminEmploymentInformationController -[hidden]right-> AdmonitorServiceMachineManageController
AdmonitorServiceMachineManageController -[hidden]right-> AdmonitorServiceMachineJianKongController

UserInfoVO -[hidden]right-> ResumeTemplateInfoVO
ResumeTemplateInfoVO -[hidden]right-> RecruitPositionInfoVO
RecruitPositionInfoVO -[hidden]right-> AdminInfoVO
AdminInfoVO -[hidden]right-> EmploymentInformationInfoVO
EmploymentInformationInfoVO -[hidden]right-> AdmonitorServiceMachineInfoVO
AdmonitorServiceMachineInfoVO -[hidden]right-> AdmonitorServiceMachineJianKongVO

@enduml
